--- a/Frontend/my-react-app/src/components/profile.module.css
+++ b/Frontend/my-react-app/src/components/profile.module.css
@@ -11,18 +11,18 @@
 } */
 
 .input_profile_form{
-   padding: 3px;
+    padding: 3px;
     background: none;
     font-size: 18px;
     border: none;
     display: block;
+    font-family: monospace;
     margin-top: 10px;
-    width: 50%;
+    /* width: 50%; */
     font-size: 20px;
-    font-weight: bold;
-    
-    /* box-shadow: 0px 0px 4px 1px #80808042; */
-
+    /* font-weight: bold; */
+    color: gray;
+ 
 }
 
 @media only screen and (max-width: 720px) {
@@ -31,14 +31,24 @@
  }
 }
 .item{
-  font-weight: lighter;
-    font-size: 18px;
-    padding: 15px;
-    box-shadow: -2px 1px 1px 1px #80808026;
-    background: #faebd729;
+ font-weight: lighter;
+    font-size: 14px;
+    padding: 1px;
 }
 .container{
     display: flex;
-    flex-direction: column;
+      
+    /* flex-direction: column; */
+    justify-content: space-around;
+    box-shadow: 0px 1px 5px 2px gray;     width: 50%;
+    margin: auto;
+    align-items: center;
+    margin-top: 25px;
+    /* margin-top: 27px; */
+    padding: 43px;
 }
 
+
+.Image_profile{
+  width: 200px;
+}
