--- a/Frontend/my-react-app/src/components/home.module.css
+++ b/Frontend/my-react-app/src/components/home.module.css
@@ -8,7 +8,8 @@
 
 .candidates_list{
     border: 2px solid black;
-    width: 31%;
+    height: 42vh;
+    width: 35%;
     text-align:center;
     background-color: rgb(214 211 211 / 15%);
 }
@@ -45,7 +46,7 @@
 
 .operate_button{
   color: white;
-    background-color: red;
+    background-color: rgb(10, 10, 155);
     padding: 10px;
     /* border: 2px solid green; */
     border-radius: 39px;
@@ -134,4 +135,18 @@
     margin: auto;
     display: block;
 
+}
+
+.candidates_list_admin{
+display: flex;
+    justify-content: space-between;
+    width: 95%;
+    margin: auto;
+    padding: 13px;
+    font-size: 20px;
+    border: none;
+    box-shadow: 0px 0px 6px 0px gray;
+    border-radius: 13px;
+    font-family: monospace;
+    margin: 16px auto;
 }
